Get property and user by id added and updated password with old password is implemented